hphp/test/zend/bad/ext-date/bug35143.php
<?php
date_default_timezone_set("UTC");

var_dump(date_default_timezone_get());
var_dump(gettimeofday());
?>